# famuli

./: CMakeLists.txt  README.md
app/: pagerank.cpp
cmake/: abseil-cpp_pkg.cmake  fastText_pkg.cmake  googletest_pkg.cmake  spdlog_pkg.cmake
demo/: demo.cpp
dev/: graph_dev.cpp
include/famuli/graph/: graph_funcs.h  ranker_core_funcs.h  ranker_cores.h  rankers.h  types.h  utils.h  vertex_funcs.h
include/famuli/model/: fasttext.h  model.h
scripts/: get_test_dep.sh
src/model/: fasttext.cpp
test_data/: graph.txt
